<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <packaging>pom</packaging>

    <groupId>com.atlassian.securitymanager</groupId>
    <artifactId>example-security-manager</artifactId>
    <version>1.0.0-SNAPSHOT</version>
    <name>Example Security manager</name>
    <description>An example security manager - forked off of the manas security manager.</description>

    <modules>
        <module>example-security-manager-core</module>
        <module>example-security-manager-tests</module>
        <module>example-security-manager-tests-aws</module>
        <module>example-security-manager-tests-aws-policies</module>
    </modules>

    <scm>
      <tag>HEAD</tag>
  </scm>

    <licenses>
        <license>
            <name>Apache 2</name>
            <distribution>repo</distribution>
            <url>https://www.apache.org/licenses/LICENSE-2.0.txt</url>
        </license>
    </licenses>

    <profiles>
        <profile>
            <id>java-9-and-above</id>
            <activation>
                <jdk>[1.9,)</jdk>
            </activation>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-javadoc-plugin</artifactId>
                        <version>3.4.0</version>
                        <configuration>
                            <additionalJOptions>
                                <additionalJOption>--add-exports=java.base/jdk.internal.reflect=ALL-UNNAMED</additionalJOption>
                                <additionalJOption>--add-exports=java.base/sun.security.util=ALL-UNNAMED</additionalJOption>
                                <additionalJOption>--add-exports=java.base/sun.net=ALL-UNNAMED</additionalJOption>
                                <additionalJOption>--add-exports=java.base/sun.nio.ch=ALL-UNNAMED</additionalJOption>
                                <additionalJOption>--add-exports=java.desktop/sun.java2d=ALL-UNNAMED</additionalJOption>
                            </additionalJOptions>
                        </configuration>
                    </plugin>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-compiler-plugin</artifactId>
                        <version>3.10.1</version>
                        <configuration>
                            <source>11</source>
                            <target>11</target>
                            <compilerArgs>
                                <arg>--add-exports</arg><arg>java.base/jdk.internal.reflect=ALL-UNNAMED</arg>
                                <arg>--add-exports</arg><arg>java.base/sun.security.util=ALL-UNNAMED</arg>
                                <arg>--add-exports</arg><arg>java.base/sun.net=ALL-UNNAMED</arg>
                                <arg>--add-exports</arg><arg>java.base/sun.nio.ch=ALL-UNNAMED</arg>
                                <arg>--add-exports</arg><arg>java.desktop/sun.java2d=ALL-UNNAMED</arg>
                            </compilerArgs>
                        </configuration>
                    </plugin>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-surefire-plugin</artifactId>
                        <configuration>
                            <argLine>
                                --add-exports=java.base/jdk.internal.reflect=ALL-UNNAMED --add-exports=java.base/sun.security.util=ALL-UNNAMED
                            </argLine>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <artifactId>maven-jar-plugin</artifactId>
                    <version>3.2.2</version>
                    <executions>
                        <execution>
                            <id>default-jar</id>
                            <phase>package</phase>
                            <goals>
                                <goal>jar</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
                <plugin>
                    <groupId>org.apache.felix</groupId>
                    <artifactId>maven-bundle-plugin</artifactId>
                    <version>5.1.5</version>
                    <executions>
                        <execution>
                            <id>generate-manifest</id>
                            <phase>prepare-package</phase>
                            <goals>
                                <goal>manifest</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>3.0.0-M6</version>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>
    <reporting>
        <plugins>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>findbugs-maven-plugin</artifactId>
                <version>3.0.5</version>
                <configuration>
                    <xmlOutput>true</xmlOutput>
                </configuration>
            </plugin>
        </plugins>
    </reporting>
    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>com.google.guava</groupId>
                <artifactId>guava</artifactId>
                <version>${google.guava.version}</version>
            </dependency>
            <dependency>
                <groupId>com.atlassian.securitymanager</groupId>
                <artifactId>example-security-manager-core</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.atlassian.securitymanager</groupId>
                <artifactId>example-security-manager-tests</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.atlassian.securitymanager</groupId>
                <artifactId>example-security-manager-tests-aws</artifactId>
                <version>${project.version}</version>
            </dependency>

            <dependency>
                <groupId>com.amazonaws</groupId>
                <artifactId>aws-java-sdk-core</artifactId>
                <version>${aws-java-sdk.version}</version>
            </dependency>
            <dependency>
                <groupId>com.amazonaws</groupId>
                <artifactId>aws-java-sdk-sqs</artifactId>
                <version>${aws-java-sdk.version}</version>
            </dependency>
            <!-- Test dependencies -->
            <dependency>
                <groupId>junit</groupId>
                <artifactId>junit</artifactId>
                <version>${junit.version}</version>
            </dependency>
            <dependency>
                <groupId>org.mockito</groupId>
                <artifactId>mockito-core</artifactId>
                <version>${mockito-core.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <properties>
        <jdkLevel>1.8</jdkLevel>
        <maven.compiler.source>11</maven.compiler.source>
        <maven.compiler.target>11</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <google.guava.version>31.1-jre</google.guava.version>
        <mockito-core.version>3.12.4</mockito-core.version>
        <junit.version>4.13.2</junit.version>
        <aws-java-sdk.version>1.12.639</aws-java-sdk.version>
    </properties>

</project>

